testsuite/tests/backtrace/pr6920_why_swallow.byte.reference
Fatal error: exception Stdlib.Pervasives.Exit
Raised at file "pr6920_why_swallow.ml", line 13, characters 41-45
Called from file "pr6920_why_swallow.ml", line 16, characters 4-13
Called from file "pr6920_why_swallow.ml", line 23, characters 2-6
